fix: fixed test responsiveness on mobile

--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -90,7 +90,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1rem;
   font-size: 0.875rem;
 }
 
@@ -111,8 +110,29 @@
 }
 
 .course-content {
-  padding: 0 1rem;
+  position: relative;
+  padding: 1rem;
 }
+
+.course-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 241px;
+  background-image: url("../../assets/images/card-bg-image.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 0;
+}
+
+.course-content > * {
+  position: relative;
+  z-index: 1;
+}
+
 
 .course-title {
   font-size: 1.25rem;
@@ -202,8 +222,14 @@
     padding: 2rem 0;
   }
 
+  .section-label{
+    flex-direction: column;
+  }
+
   .section-title {
-    font-size: 1.5rem;
+    font-size: 1rem;
+
+  line-height: 48.5px;
   }
 
   .course-footer {
